--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,40 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
 // Variables
 @import "variables";
-
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+// Bulma
+@import "~bulma/bulma";
+@import './navigation';
+@import 'compnents/datepicker';
+
+html, body {
+  background-color: #fff;
+  color: #636b6f;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  height: 100vh;
+  margin: 0;
+}
+
+hr {
+  margin: 0;
+}
+
+.hero {
+  background-color: white;
+}
+
+footer.footer {
+  background-color: white;
+  justify-content: center;
+}
+
+.columns {
+  margin: 0;
+}
+
+.page-content .container {
+  max-width: 960px;
+}
