setup post model and routing

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,7 +7,7 @@
 // Bulma
 @import "~bulma/bulma";
 @import './navigation';
-@import 'compnents/datepicker';
+@import 'components/datepicker';
 
 html, body {
   background-color: #fff;
