--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,9 +24,11 @@ footer.footer {
 }
 
 .left-container {
+  margin-left: 1em;
   border-right: 1px solid #dbdbdb;
 }
 
 .right-container {
+  margin-right: 1em;
   border-left: 1px solid #dbdbdb;;
 }
