--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14568,10 +14568,12 @@ footer.footer {
 }
 
 .left-container {
+  margin-left: 1em;
   border-right: 1px solid #dbdbdb;
 }
 
 .right-container {
+  margin-right: 1em;
   border-left: 1px solid #dbdbdb;
 }
 
