--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,17 +10,8 @@
 @import 'components/datepicker';
 
 html, body {
-  background-color: #fff;
   color: #636b6f;
   font-family: 'Raleway', sans-serif;
-  font-weight: 100;
-  height: 100vh;
-  margin: 0;
-}
-
-footer.footer {
-  background-color: white;
-  justify-content: center;
 }
 
 .left-container {
@@ -30,5 +21,20 @@ footer.footer {
 
 .right-container {
   margin-right: 1em;
-  border-left: 1px solid #dbdbdb;;
+  border-left: 1px solid #dbdbdb;
+}
+
+.columns.is-fullheight {
+  min-height: calc(100vh - (#{$navbar-height} - .75rem));
+  max-height: calc(100vh - (#{$navbar-height} - .75rem));
+  display: flex;
+  flex-direction: row;
+  justify-content: stretch;
+  .column {
+    overflow-y: auto;
+  }
+}
+
+.column.is-main-content {
+  margin: 0 2em 0 2em;
 }
