placement search bar mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 @import "~froala-editor/css/froala_style.min.css";
 @import 'components/datepicker';
 @import "~vue-multiselect/dist/vue-multiselect.min.css";
+@import '~buefy/lib/buefy.css';
 
 html, body {
   color: #636b6f;
