Add todos to homepage

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -110,3 +110,9 @@ hr.title-ruler {
     max-width: 50vw;
   }
 }
+
+.is-disabled {
+  pointer-events: none;
+  opacity: .65;
+  cursor: not-allowed;
+}
